Fission iframes don't handle allowfullscreen correctly.
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(2 files, 1 obsolete file)
This check only runs in the parent process.
The infrastructure added in the blocking bugs will be useful to fix this.
Comment 2•6 years ago
|
||
I think we also should take allow="fullscreen" into account here.
Comment 3•6 years ago
|
||
The priority flag is not set for this bug.
:jimm, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 4•6 years ago
|
||
This bug blocks Fission Nightly (milestone M6), which is targeting mid-2020. Therefore, this bug ought to be fixed some time in 2020 Q1 or Q2.
Updated•6 years ago
|
Comment 5•6 years ago
|
||
Emilio, did you have STR for this allowfullscreen bug?
kmag says this bug should also affect non-Fission e10s if the allowfullscreen check is in the parent process.
You added a comment (in bug 1606660) saying:
// FIXME(emilio, bug 1606660): allowfullscreen should probably move to
// OwnerShowInfo.
| Assignee | ||
Comment 6•6 years ago
|
||
Well, that is true in fairness. That being said, this is the check that's supposed to prevent it for regular frames, and it is still not fission-safe...
Yet http://crisal.io/tmp/youtube-embed.html does work as expected... So something is off.
| Assignee | ||
Comment 7•6 years ago
|
||
Here's a test-case: http://crisal.io/tmp/allowfullscreen-fission.html
It incorrectly shows fullscreenEnabled = true everywhere, while it should show false, then true.
The reason is that this check doesn't work in fission.
| Assignee | ||
Comment 8•6 years ago
|
||
Yet the test-case in comment 6 ~works on Fission because of this feature policy check, which is not here.
So allowfullscreen doesn't work, but that feature-policy check should cause fullscreenEnabled to return false in the first place.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 9•6 years ago
|
||
This has the side effect of fixing support of mozallowfullscreen when
feature policy is enabled, because it checks only AllowFullscreen, which
doesn't check for the moz-prefixed attribute.
I left the swapframeloader bits alone because they're mozbrowser
specific and I have no idea what they're trying to do.
| Assignee | ||
Comment 10•6 years ago
|
||
So that they work properly on fission iframes.
| Assignee | ||
Comment 11•6 years ago
|
||
I noticed that my previous patch wouldn't support it properly, and while
it could be feasible to fix it, it seems better to just remove the
feature. The current implementation doesn't work for remote browsers
already.
This was added in bug 1299795 but we no longer allow to load untrusted
content in the sidebar, afaict, and if we did we definitely don't allow
to load it in the parent process.
Depends on D78702
Updated•6 years ago
|
Comment 12•6 years ago
|
||
Comment 13•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/615339857e65
https://hg.mozilla.org/mozilla-central/rev/fef0196c86dd
Description
•