Bug 1606660 - Factor out AllowFullscreen checks for iframe. r=nika

This has the side effect of fixing support of mozallowfullscreen when
feature policy is enabled, because it checks only AllowFullscreen, which
doesn't check for the moz-prefixed attribute.

I left the swapframeloader bits alone because they're mozbrowser
specific and I have no idea what they're trying to do.

Differential Revision: https://phabricator.services.mozilla.com/D78701