dom/webidl/HTMLIFrameElement.webidl
@@ -25,7 +25,7 @@ interface HTMLIFrameElement : HTMLElement {
            attribute DOMString name;
   [PutForwards=value] readonly attribute DOMTokenList sandbox;
            // attribute boolean seamless;
-  [CEReactions, SetterThrows, Pure]
+  [CEReactions, SetterThrows, Pure, BinaryName="allowFullscreenForBindings"]
            attribute boolean allowFullscreen;
   [CEReactions, SetterThrows, Pure]
            attribute boolean allowPaymentRequest;
